SQL desplegado y fixes

--- a/.envEXAMPLE
+++ b/.envEXAMPLE
@@ -3,5 +3,9 @@
   JWT_SECRET=
   JWT_EXPIRATION=
   JWT_COOKIE_EXPIRES=
-  DB_DATABASE=
-  MONGODB_URI=
+  DB_HOST=
+DB_USER=
+DB_DATABASE=
+DB_PORT= 
+DB_PASSWORD=
+MONGODB_URI=
