--- a/utils/Proyecto_JobEvents_App.postman_collection.json
+++ b/utils/Proyecto_JobEvents_App.postman_collection.json
@@ -149,7 +149,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\n    \"role_id\": 1,\n    \"email\": \"juanita@gmail.com\"\n}",
+							"raw": "{\n    \"is_logged\": true,\n    \"last_time_logged\": \"1995-12-17T03:24:00\",\n    \"email\": \"sergio@admin.com\"\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -158,6 +158,32 @@
 						},
 						"url": "http://localhost:3000/api/users",
 						"description": "PUT to edit user's role_id or is_active "
+					},
+					"response": []
+				},
+				{
+					"name": "http://localhost:3000/api/userfavorite?email=sergio@admin.com",
+					"request": {
+						"method": "GET",
+						"header": [],
+						"url": {
+							"raw": "http://localhost:3000/api/userfavorite?email=sergio@admin.com",
+							"protocol": "http",
+							"host": [
+								"localhost"
+							],
+							"port": "3000",
+							"path": [
+								"api",
+								"userfavorite"
+							],
+							"query": [
+								{
+									"key": "email",
+									"value": "sergio@admin.com"
+								}
+							]
+						}
 					},
 					"response": []
 				},
@@ -187,7 +213,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\n    \"user_id\": 6,\n    \"favorite_id\": 2\n}",
+							"raw": "{\n    \"email\": \"sergio@admin.com\",\n    \"favorite_id\": \"6683390f9d661584086b0d2a\"\n}",
 							"options": {
 								"raw": {
 									"language": "json"
