--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.4",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.12.0",
     "pug": "^3.0.3",
     "puppeteer": "^22.12.1",
